--- a/assets/index.html
+++ b/assets/index.html
@@ -1,43 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Calculadora</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Promesa</title>
 </head>
-
 <body>
-    <header class="header">
-        <h1>Bienvenido a mi Calculadora</h1>
-    </header>
-    <div class="calculadora">
-        <input type="text" id="pantalla" readonly>
-        <div class="botones">
-            <button onclick="agregarCaracter('7')">7</button>
-            <button onclick="agregarCaracter('8')">8</button>
-            <button onclick="agregarCaracter('9')">9</button>
-            <button onclick="agregarCaracter('/')">/</button>
-            <button onclick="agregarCaracter('4')">4</button>
-            <button onclick="agregarCaracter('5')">5</button>
-            <button onclick="agregarCaracter('6')">6</button>
-            <button onclick="agregarCaracter('*')">*</button>
-            <button onclick="agregarCaracter('1')">1</button>
-            <button onclick="agregarCaracter('2')">2</button>
-            <button onclick="agregarCaracter('3')">3</button>
-            <button onclick="agregarCaracter('-')">-</button>
-            <button onclick="agregarCaracter('0')">0</button>
-            <button onclick="agregarCaracter('.')">.</button>
-            <button onclick="calcular()">=</button>
-            <button onclick="agregarCaracter('+')">+</button>
-            <button onclick="limpiarPantalla()">C</button>
-        </div>
+    <div class="container ">
+        <form id="miFormulario">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" required>
+            <button type="button" onclick="enviarDatos()">Enviar</button>
+        </form>
+        <p id="mensaje" class="oculto"></p>
+
     </div>
-    <footer class="footer">
-        <p> © Desarrollado por Ottoniel Menéndez Kinal 2024</p>
-    </footer>
     <script src="logica.js"></script>
 </body>
-
 </html>
