--- a/assets/index.html
+++ b/assets/index.html
@@ -16,6 +16,6 @@
         <p id="mensaje" class="oculto"></p>
 
     </div>
-    <script src="logica.js"></script>
+    <script src="logicaA.js"></script>
 </body>
 </html>
